@@ -22,7 +22,8 @@
 #
 # Authors:
 #  Loic Dachary <loic@gnu.org>
-#
+#  Cedric Pinson <cpinson@freesheep.org>
+
 from twisted.internet import reactor
 
 from string import join
@@ -409,6 +410,16 @@ class PokerRenderer:
     def linetrace(self):
         sys.settrace(global_trace)
 
+    def pythonEvent(self, event, map = None):
+        if self.verbose:
+            print "pythonEvent %s %s" % (event,str(map))
+
+        if event == "quit":
+            if self.state == OUTFIT:
+                self.changeState(OUTFIT_DONE)
+            else:
+                self.quit()
+                
     def setProtocol(self, protocol):
         self.protocol = protocol
         if protocol:
@@ -1540,7 +1551,7 @@ class PokerRenderer:
         elif name == "hand_history":
             self.changeState(HAND_LIST)
         elif name == "quit":
-            self.quit()
+            self.pythonEvent("quit")
         elif name == "tables_list":
             self.changeState(LOBBY)
         elif name == "tournaments":
